--- a/public/halaman/index/index.styles.css
+++ b/public/halaman/index/index.styles.css
@@ -2,6 +2,10 @@
     background: linear-gradient(135deg, #0d9aac 60%, transparent 40%);
 }
 
+.owl-carousel.owl-loaded {
+    display: grid !important;
+}
+
 .news-section-title, .announcement-section-title, .info-section-title {
     position: relative;
     display: grid;
@@ -12,4 +16,44 @@
     margin-top: 20px;
     margin-bottom: 20px;
     padding: 8px 10px 8px 35px;
+}
+
+.card-container {
+    position: relative;
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-bottom: 10px;
+    padding: 0;
+    box-shadow: 0px 0px 18px 1px rgba(9,9,9,.2);
+    overflow: hidden;
+}
+
+.card-details {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: 0;
+    overflow: hidden;
+}
+
+.card-details .created-at {
+    position: absolute;
+    top: 5;
+    left: 0;
+    background-color: rgb(4, 35, 65);
+    color: #fff;
+    padding: 7px 12px;
+    margin: 8px 8px;
+    border-radius: 2px;
+}   
+
+.card-details .post-link {
+    position: absolute;
+    background-color: rgba(4, 35, 65, .85);
+    bottom: 0;
+    left: 0;
+    right: 0;
+    text-align: center;
 }
