Perbaikan Front-end dan Back-end

--- a/public/halaman/admin/edit-akun/edit-akun.styles.css
+++ b/public/halaman/admin/edit-akun/edit-akun.styles.css
@@ -1,5 +1,17 @@
-img{
-    width: 200px;
-    height: 200px;
-    border-radius: 20px;
+.list-group-item {
+    background-color: unset !important;
+}
+
+.no-decoration {
+    text-decoration: none;
+    color: #212529;
+}
+
+.no-decoration:hover {
+    color: #212529;
+}
+
+.list-group-item:hover {
+    cursor: pointer;
+    background-color: darkgray !important;
 }
