--- a/public/halaman/admin/edit-akun/edit-akun.styles.css
+++ b/public/halaman/admin/edit-akun/edit-akun.styles.css
@@ -1,3 +1,11 @@
+.none {
+    display: none;
+}
+
+.strong {
+    font-weight: bold;
+}
+
 .list-group-item {
     background-color: unset !important;
 }
