--- a/public/halaman/guest/index/index.styles.css
+++ b/public/halaman/guest/index/index.styles.css
@@ -1,3 +1,8 @@
+p{
+    font-size: 18px;
+    text-align: justify;
+}
+
 .owl-carousel.owl-loaded {
     display: grid !important;
 }
@@ -7,7 +12,8 @@
     width: 350px;
 }
 
-.news-section-title, .announcement-section-title, .info-section-title {
+.news-section-title, .announcement-section-title {
+    background: linear-gradient(135deg, #0d9aac 60%, transparent 40%);
     position: relative;
     display: grid;
     grid-template-columns: 60% 40%;
@@ -17,14 +23,7 @@
     margin-top: 20px;
     margin-bottom: 20px;
     padding: 8px 10px 8px 35px;
-}
 
-.news-section-title {
-    background: linear-gradient(135deg, #0d9aac 60%, transparent 40%);
-}
-
-.announcement-section-title {
-    background: linear-gradient(135deg, #0d9aac 60%, transparent 40%);
 }
 
 .card-container {
@@ -72,7 +71,18 @@
     height: auto;
 }
 
-p{
-    font-size: 18px;
-    text-align: justify;
+@media only screen and (max-width: 480px) { 
+    h4 {
+        font-size: 1rem;
+    }
+
+    .next {
+        font-size: 10px;
+    }
+
+    .announcement-section-title .news-section-title {
+        background: linear-gradient(140deg, #0d9aac 70%, transparent 40%);
+    }
+
+    
 }
