--- a/public/halaman/guest/pendaftaran/pendaftaran.styles.css
+++ b/public/halaman/guest/pendaftaran/pendaftaran.styles.css
@@ -1,3 +1,7 @@
+h1 {
+    font-weight: 600;
+}
+
 .registration-section-title {
     background: linear-gradient(135deg, #0d9aac 60%, transparent 40%);
 }
@@ -12,4 +16,30 @@
     margin-top: 20px;
     margin-bottom: 20px;
     padding: 8px 10px 8px 35px;
+}
+
+@media only screen and (max-width: 360px) {
+    h1 {
+        font-size: 1.5rem;
+    }
+
+    .registration-section-title {
+        background: linear-gradient(120deg, #0d9aac 80%, transparent 40%);
+    }
+}
+
+@media only screen and (max-width: 480px) {
+    h1 {
+        font-size: 1.5rem;
+    }
+
+    .registration-section-title {
+        background: linear-gradient(120deg, #0d9aac 80%, transparent 40%);
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .registration-section-title {
+        background: linear-gradient(120deg, #0d9aac 80%, transparent 40%);
+    }
 }
