--- a/public/halaman/master/master.styles.css
+++ b/public/halaman/master/master.styles.css
@@ -13,10 +13,14 @@ a {
     font-size: 100% !important;
 }
 
+
 .footer{
+    position: fixed;
     background-color: #276678;
     text-align: center;
     color: white;
+    bottom: 0;
+    width: 100%;
     padding: 10px;
     font-size: 15px;
 }
