Update Halaman Pendaftaran V2 (Guest)

--- a/public/halaman/master/master.styles.css
+++ b/public/halaman/master/master.styles.css
@@ -15,7 +15,7 @@ a {
 
 
 .footer{
-    position: fixed;
+    position: relative;
     background-color: #276678;
     text-align: center;
     color: white;
