Fixing dan Penambahan data pada Halaman Guest

--- a/public/halaman/guest/profile/profile.styles.css
+++ b/public/halaman/guest/profile/profile.styles.css
@@ -1,3 +1,17 @@
+.news-section-title, .announcement-section-title {
+    background: linear-gradient(135deg, #0d9aac 60%, transparent 40%);
+    position: relative;
+    display: grid;
+    grid-template-columns: 60% 40%;
+    align-items: center;
+    color: #fff;
+    margin-left: -35px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding: 8px 10px 8px 35px;
+
+}
+
 @media only screen and (max-width: 480px) { 
     .form-control-sm {
         width: 150px !important;
@@ -9,5 +23,9 @@
 
     td p {
         font-size: 10px !important;
+    }
+
+    .news-section-title .announcement-section-title {
+        background: linear-gradient(140deg, #0d9aac 70%, transparent 40%);
     }
 }
